--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -13,7 +13,7 @@ Fonts are separated by a & */
 
   /* change the values below to your chosen font(s) */
   --heading-font: Skranji;
-  --paragraph-font: Caveat, sans-seriff, Helvetica;
+  --paragraph-font: Caveat, sans-serif, Helvetica;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #001427;  /* headlines on a white background */ 
