--- a/photography/styles/site-plan.css
+++ b/photography/styles/site-plan.css
@@ -16,19 +16,21 @@ Fonts are separated by a | */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #14453D;  /* headlines on a white background */ 
-  --headline-color-on-color: #7A89C2; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #14453D; /* paragraph text on a white background */ 
+  --headline-color-on-color: #57A773; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #1B065E; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #7A89C2; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #14453D  ;
-  --nav-link-color: #14453D;
+  --paragraph-background-color: #D3D3D3;
+  --nav-link-color: #57A773;
   --nav-background-color: #1B065E;
   --nav-hover-link-color: #7A89C2;
-  --nav-hover-background-color: #57A773;
+  --nav-hover-background-color: #14453D;
 }
 
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
-
+#content {
+  max-width: 1600px;
+}
 body {
   max-width: 1200px;
   margin: 0 auto;
@@ -39,6 +41,7 @@ body {
 img {
   display: block;
   margin: 0 auto;
+  max-width: 800px;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
