--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -69,6 +69,7 @@ nav a:hover {
   padding-top: 5px;
   justify-self: center;
   align-self: center;
+  max-height: 20px;
 }
 .home-title {
   color: #999;
@@ -190,7 +191,11 @@ footer p a:hover {
 footer .social img {
   padding-top: 15px;
 }
-
+#logo-img {
+  max-width: 25%;
+  padding-top: 5px;
+  padding-left: 5px;
+}
 
 
 
