--- a/photography/styles/style.css
+++ b/photography/styles/style.css
@@ -39,6 +39,7 @@ nav a:hover {
 }
 #hero-img {
   width: 100%;
+  height: 90%;
 }
 #hero {
   display: grid;
@@ -66,7 +67,8 @@ nav a:hover {
   text-align: center;
 }
 .logo-img {
-    max-width: 90%;
+    max-width: 80%;
+    max-height: 65%;
     padding-top: 0px;
     padding-left: 5px;
     justify-self: center;
@@ -128,20 +130,38 @@ main section img {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
 }
-.rivers-card {
-  margin: 200px 0;
-  grid-column: 2/4;
+.journey-card {
+  margin: 50px 0;
+  grid-column: 2/5;
   grid-row: 2/3;
 }
-.camping-card {
-  margin: 200px 0;
-  grid-column: 5/7;
-  grid-row: 2/3;
+.me {
+width: 100%;
+grid-column: 6/9;
+grid-row: 2/3;
+margin: 50px 0;
 }
-.rapids-card {
-  margin: 200px 0;
-  grid-column: 8/10;
-  grid-row: 2/3;
+.inspiration-card {
+  margin: 50px 0;
+  grid-column: 6/9;
+  grid-row: 3/4;
+}
+.bertie {
+width: 100%;
+grid-column: 2/5;
+grid-row: 3/4;
+margin: 200px 0;
+}
+.nature-card {
+  margin: 50px 0;
+  grid-column: 2/5;
+  grid-row: 4/5;
+}
+.orcas {
+width: 100%;
+grid-column: 6/9;
+grid-row: 4/5;
+margin: 200px 0;
 }
 .mountains {
 grid-column: 2/7;
