--- a/photography/styles/style.css
+++ b/photography/styles/style.css
@@ -70,7 +70,7 @@ nav a:hover {
     max-width: 80%;
     max-height: 65%;
     padding-top: 0px;
-    padding-left: 5px;
+    padding-left: 35px;
     justify-self: center;
   }
 #logo_link {
@@ -140,6 +140,7 @@ width: 100%;
 grid-column: 6/9;
 grid-row: 2/3;
 margin: 50px 0;
+box-shadow: 5px 5px 10px black;
 }
 .inspiration-card {
   margin: 50px 0;
@@ -147,10 +148,11 @@ margin: 50px 0;
   grid-row: 3/4;
 }
 .bertie {
-width: 100%;
-grid-column: 2/5;
-grid-row: 3/4;
-margin: 200px 0;
+  width: 100%;
+  grid-column: 2/5;
+  grid-row: 3/4;
+  margin: 200px 0;
+  box-shadow: 5px 5px 10px black;
 }
 .nature-card {
   margin: 50px 0;
@@ -162,6 +164,7 @@ width: 100%;
 grid-column: 6/9;
 grid-row: 4/5;
 margin: 200px 0;
+box-shadow: 5px 5px 10px black;
 }
 .mountains {
 grid-column: 2/7;
@@ -188,12 +191,9 @@ color: var(--secondary-color);
 h4 {
 color: white;
 }
-h2 {
-margin: 0;
-}
 footer {
   padding: 25px 50px;
-  margin-top: 200px;
+  margin-top: 95px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -221,73 +221,57 @@ footer .social img {
   padding-top: 5px;
   padding-left: 5px;
 }
-blog-grid {
-  display: grid;
-  grid-template-columns: 10 auto;
-  grid-template-rows: 10 auto;
-}
 .home-grid {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: (10, 1fr);
-}
-.booking-card {
-  line-height: 1.5em;
-  padding: 35px;
-  background-color: #26532B;
-  box-shadow: 5px 5px 10px black;
-  grid-column: 2/7;
-  grid-row: 2/4;
-  margin: 200px 200px;
-}
-.booking-card h1 {
-  color: #001427;
-}
-.booking-card p {
-  font-size: .8em;
-  padding-bottom: 15px;
-  color:#4A7B9D
-}
-.highlights-card {
-  line-height: 1.5em;
-  padding: 35px;
-  background-color: #001427;
-  box-shadow: 5px 5px 10px black;
-  grid-column: 5/10;
-  grid-row: 5/7;
-  margin: 200px 200px;
-}
-.highlights-card h1 {
-color: #26532B;
 }
 .highlights-card p {
   font-size: .8em;
   padding-bottom: 15px;
   color:#6BAA75
 }
-.encounters-card {
-  line-height: 1.5em;
-  padding: 35px;
-  background-color: #26532B;
+.theshot-grid {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+}
+.limpy-card {
+  grid-column: 6/10;
+  grid-row: 1/3;
+  margin-top: 95px;
+  margin-right: 50px;
+}
+.limpy {
+  width: 100%;
+  margin-top: 95px;
+  margin-left: 50px;
+  grid-column: 1/5;
+  grid-row: 1/3;
   box-shadow: 5px 5px 10px black;
-  grid-column: 2/7;
-  grid-row: 8/10;
-  margin: 200px 200px;
 }
-.encounters-card h1 {
-color: #001427;
+.orca-card {
+  grid-column: 1/5;
+  grid-row: 3/5;
+  margin-top: 50px;
+  margin-left: 50px
 }
-.encounters-card h3 {
-color: #001427;
+.orca {
+  width: 100%;
+  margin-top: 50px;
+  margin-right: 50px;
+  grid-column: 6/10;
+  grid-row: 3/5;
+  box-shadow: 5px 5px 10px black;
 }
-.encounters-card p {
+.orca-card h2, .limpy-card h2 {
+  color: #26532B;
+  }
+.orca-card p, .limpy-card p {
   font-size: .8em;
   padding-bottom: 15px;
-  color:#4A7B9D
-}
-
-
-
+  color:#26532B
+  }
   
 
   @media screen and (max-width: 900px) {
